--- a/量化双相.md
+++ b/量化双相.md
@@ -16,7 +16,7 @@ def collect_biosignals():
     return preprocess([ECG, EDA, actigraphy])
 
 
-包含心率变异性（HRV）高频功率谱能量值、皮肤电势定向反应等核心指标（网页4/6）
+包含心率变异性（HRV）高频功率谱能量值、皮肤电势定向反应等核心指标
 
 • 数字表型捕获系统
 开发移动端SDK采集：
@@ -45,7 +45,7 @@ CROSS LINKED WITH genetic_subgraph (rs12673181等SNP位点)
 尿酸(UA)	360-420 μmol/L	0.32
 直接胆红素(D-BIL)	≤4.3 μmol/L	0.28
 前白蛋白(PA)	180-380 mg/L	0.25
-（基于网页7的nomogram模型）
+
 
 三、智能分析模块
 
